# UniSchedule

./: next.config.mjs  package-lock.json  package.json
.github/workflows/: deploy.yml
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  test_service.py
backend/api/dependencies/: auth.py
backend/api/v1/: auth.py  calendar.py  dummy.py  export.py  notifications.py  timetable.py
backend/core/: assets.py  config.py  database.py  mail.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 7cce0fd25455_initial_migration.py  c7035a72335f_initial_migrations.py
backend/modules/auth/: models.py  repository.py  schemas.py  service.py
backend/modules/calendar/: models.py  repository.py  schemas.py  service.py
backend/modules/dummy/: repository.py  service.py
backend/modules/export/: service.py
backend/modules/notifications/: models.py  repository.py  schemas.py  service.py
backend/modules/timetable/: models.py  repository.py  schemas.py  service.py
src/app/: globals.css  layout.js  page.js  page.module.css  placeholder.module.css
src/app/courses/: courses.module.css  page.js
src/app/faculties/: faculties.module.css  page.js
src/app/login/: login.module.css  page.js
src/app/register/: page.js
src/app/rooms/: page.js  rooms.module.css
src/app/staff/: page.js  staff.module.css
src/app/terms/: page.js  terms.module.css
src/components/ClientLayout/: ClientLayout.js
src/context/: AppContext.js  AuthContext.js
src/data/: mockData.js
src/lib/: apiClient.js  conflicts.js  logo.js  pdfExport.js  utils.js
(+19 files in other folders)
